fixing alignment

--- a/src/components/Inside-Grocery-List/inside-grocery-list.styles.scss
+++ b/src/components/Inside-Grocery-List/inside-grocery-list.styles.scss
@@ -50,6 +50,7 @@
 @media screen and (max-width: 480px) {
     .inside-grocery-list-container {
         gap: 3vh;
+        padding: 3vw;
     }
     
     .grocery-item-container {
