--- a/src/routes/Home/home.styles.scss
+++ b/src/routes/Home/home.styles.scss
@@ -118,7 +118,6 @@
 
 @media only screen and (max-width: 786px) {
 
-
     .add-food {
         img {
             height: 9vh;
@@ -139,6 +138,9 @@
 }
 
 @media only screen and (max-width: 480px) {
+    .pantry-container {
+        margin: 10vh 0;
+    }
     
     .outside-pantry {
         margin: 10vw;
@@ -179,12 +181,13 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 1vw;
-        margin-bottom: 5vh;
-    
+        flex-direction: column;
+        gap: 5vh;
+        margin-bottom: 5vh;    
     
         button {
             font-size: 7vw;
+            padding: 2vh 3vw;
         }
     
     }
