--- a/src/routes/Login/login.styles.scss
+++ b/src/routes/Login/login.styles.scss
@@ -66,7 +66,6 @@
 }
 
 .login-info {
-    align-self: flex-start;
     width: 50vh;
     margin: 3vh 2vh 5vh 2vh;
     font-family: 'Inter', sans-serif;
